--- a/homePage/homepage.html
+++ b/homePage/homepage.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bakery!</title>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Bakery!</title>
 
-</head>
-    <script src="homePage.js"></script>
+    </head>
+    <body>
+        <h1>
+        </h1>
+        <script type="text/javascript" src="C:\Users\adimo\OneDrive\NEU\Projects\Bakery\bakery-website\homePage\homePageBody.js"></script>
+        <!-- <script>
+            document.body.innerHTML = "<h1>Welcome to our page!</h1>";
+        </script> -->
+        <!-- <p id="demo">A Paragraph.</p>
+        <button type="button" onclick="myFunction()">Try it</button> -->
+        <!-- <h1>This is a test</h1> -->
+    </body>
 </html>
