Starting to design site

--- a/homePage/homepage.html
+++ b/homePage/homepage.html
@@ -8,9 +8,23 @@
     </head>
     <body>
         <h1>
+            Name of Bakery
         </h1>
-        <script type="text/javascript" src="C:\Users\adimo\OneDrive\NEU\Projects\Bakery\bakery-website\homePage\homePageBody.js"></script>
+
+        <nav>
+            <a href="C:\Users\adimo\OneDrive\NEU\Projects\Bakery\bakery-website\homePage\menu.html" target="_self">Menu</a>
+            <!-- <a href="/css/">CSS</a> -->
+        </nav>
+
+        <p>
+            Welcome to our page!🍪
+        </p>
+
         <!-- <script>
+            document.body.innerHTML = "Welcome to our page!";
+        </script> -->
+        <!-- <script>
+            type="text/javascript" src="C:\Users\adimo\OneDrive\NEU\Projects\Bakery\bakery-website\homePage\homePageBody.js"
             document.body.innerHTML = "<h1>Welcome to our page!</h1>";
         </script> -->
         <!-- <p id="demo">A Paragraph.</p>
