removed hardcoding of menu.html

--- a/homePage/homepage.html
+++ b/homePage/homepage.html
@@ -11,10 +11,8 @@
             Name of Bakery
         </h1>
 
-        <nav>
-            <a href="C:\Users\adimo\OneDrive\NEU\Projects\Bakery\bakery-website\homePage\menu.html" target="_self">Menu</a>
+        <a href="menu.html">check out our menu pls</a>
             <!-- <a href="/css/">CSS</a> -->
-        </nav>
 
         <p>
             Welcome to our page!🍪
